--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-tsc": "^2.2.0"
   },
   "dependencies": {
+    "@microsoft/clarity": "^1.0.0",
     "jszip": "^3.10.1",
     "lu2": "^2025.1.6",
     "opentype.js": "^1.3.4",
